fixed admin list table header spacing

--- a/Resources/public/css/rz-style.css
+++ b/Resources/public/css/rz-style.css
@@ -41,14 +41,16 @@
 .rz-cms-admin .sonata-ba-list-field-header-boolean,
 .rz-cms-admin .sonata-ba-list-field-header-datetime,
 .rz-cms-admin .sonata-ba-list-field-orm_many_to_one,
-.rz-cms-admin .sonata-ba-list-field-impersonating
+.rz-cms-admin .sonata-ba-list-field-impersonating,
+.rz-cms-admin .sonata-ba-list-field-header-action,
+.rz-cms-admin .sonata-ba-list-field-action
  {
     text-align: center !important;
     text-overflow:ellipsis !important;
     white-space: nowrap;
     overflow: hidden;
-    max-width: 100px;
-    width: 100px;
+    /*max-width: 100px;*/
+    /*width: 100px;*/
 }
 
 .rz-cms-admin .sonata-ba-list-field-string > a,
